두번째브랜치(b2-test)에서 추가했음

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	<body>
 		<h1>Soo's Git Index</h1>
 		<p>섭주사준사서준서</p>
-		<div><img src="imgs/daum.net"></div>
+		<p>두번째 브랜치(b2-test)에서 추가한 구문</p>
+		<div><img src="imgs/daum.png"></div>
 	</body>
 </html>
 
