commit을 이용해서 b1-test와 병합완료(Conflict해결)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<p>섭주사준사서준서</p>
 		<p>두번째 브랜치(b2-test)에서 추가한 구문</p>
 		<div><img src="imgs/daum.png"></div>
-		<div><img src="imgs/google.png"></div>
+		<div><img src="imgs/google.png" alt="Good morning Google"></div>
 	</body>
 </html>
 
